--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,11 @@
     ],
     "require": {
         "zenstruck/backup": "^1.3.0",
-        "symfony/framework-bundle": "~2.3|~3.0|^4.*|^5.*"
+        "symfony/framework-bundle": "~2.3|~3.0|^4|^5"
     },
     "require-dev": {
-        "symfony/console": "~2.3|~3.0|^4.*|^5.*",
-        "symfony/yaml": "~2.3|~3.0|^4.*|^5.*",
+        "symfony/console": "~2.3|~3.0|^4|^5",
+        "symfony/yaml": "~2.3|~3.0|^4|^5",
         "matthiasnoback/symfony-dependency-injection-test": "^1.1",
         "sebastian/exporter": "^2.0",
         "phpunit/phpunit": "^5.7"
